# ftldat-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
src/: dat_reader.rs  dat_writer.rs  entry.rs  error.rs  file.rs  ftldat.rs  lib.rs  lua_exports.rs  package.rs  prelude.rs
src/dat/: constants.rs  error.rs  mod.rs  reader.rs  writer.rs
src/dat_package/: mod.rs  reader.rs  writer.rs
src/ftldat/: entry.rs  file.rs  mod.rs  package.rs  prelude.rs
src/pkg/: constants.rs  error.rs  mod.rs  reader.rs  shared.rs  writer.rs
src/pkg_package/: mod.rs  reader.rs  shared.rs  writer.rs
src/shared/: entry.rs  error.rs  mod.rs  package.rs  reader.rs  writer.rs
src/shared/error/: mod.rs  reader.rs  shared.rs  writer.rs
tests/: dat_reader.rs  dat_writer.rs  ftldat.rs  package.rs  pkg_reader.rs  pkg_writer.rs
tests-resources/: test.pkg
