[package]
name = "ftldat"
version = "0.1.0"
authors = [
    "kartoFlane"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ftldat"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# for release builds, use module mode:
#mlua = { version = "0.8.3", features = ["lua51", "module"] }
# for development builds, use vendored mode:
mlua = { version = "0.8.3", features = ["lua51", "vendored"] }
byteorder = { version = "1.4.3" }
thiserror = "1.0.32"

[dev-dependencies]
tempfile = "3.3.0"
