[package]
name = "ftldat"
version = "0.1.0"
authors = [
    "kartoFlane"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ftldat"
crate-type = ["lib"]

[dependencies]
byteorder = { version = "1.4.3" }
thiserror = "1.0.32"
memmap2 = "0.5.10"

[dev-dependencies]
tempfile = "3.3.0"
