[package]
name = "ftldat"
version = "0.1.0"
authors = [ "kartoFlane <tbachminski@gmail.com>" ]
edition = "2021"
description = "Rust implementation of FTLDat - a simple library for unpacking and repacking of .dat files, which are used by the games Into the Breach and Faster than Light."
license = "GPL-3.0"
keywords = [ "lua", "modding" ]
repository = "https://github.com/itb-community/ftldat-rs"

[lib]
name = "ftldat"
crate-type = ["lib"]

[dependencies]
byteorder = { version = "1.4.3" }
thiserror = "1.0.32"
memmap2 = "0.5.10"

[dev-dependencies]
tempfile = "3.3.0"
